// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Button component renders a danger button when passed prop 1`] = `
<styled.button
  danger={true}
  iconOnly={false}
  large={false}
  link={false}
  primary={false}
  secondary={false}
  small={false}
  type="button"
>
  Danger
</styled.button>
`;

exports[`Button component renders a default button by default 1`] = `
<styled.button
  danger={false}
  iconOnly={false}
  large={false}
  link={false}
  primary={false}
  secondary={false}
  small={false}
  type="button"
>
  Default
</styled.button>
`;

exports[`Button component renders a large button when passed prop 1`] = `
<styled.button
  danger={false}
  iconOnly={false}
  large={true}
  link={false}
  primary={false}
  secondary={false}
  small={false}
  type="button"
>
  Primary
</styled.button>
`;

exports[`Button component renders a large, primary button when passed prop 1`] = `
<styled.button
  danger={false}
  iconOnly={false}
  large={true}
  link={false}
  primary={true}
  secondary={false}
  small={false}
  type="button"
>
  Primary
</styled.button>
`;

exports[`Button component renders a link button when passed prop 1`] = `
<styled.button
  danger={false}
  iconOnly={false}
  large={false}
  link={true}
  primary={false}
  secondary={false}
  small={false}
  type="button"
>
  Link
</styled.button>
`;

exports[`Button component renders a primary button when passed prop 1`] = `
<styled.button
  danger={false}
  iconOnly={false}
  large={false}
  link={false}
  primary={true}
  secondary={false}
  small={false}
  type="button"
>
  Primary
</styled.button>
`;

exports[`Button component renders a secondary button when passed prop 1`] = `
<styled.button
  danger={false}
  iconOnly={false}
  large={false}
  link={false}
  primary={false}
  secondary={true}
  small={false}
  type="button"
>
  Primary
</styled.button>
`;

exports[`Button component renders a small button when passed prop 1`] = `
<styled.button
  danger={false}
  iconOnly={false}
  large={false}
  link={false}
  primary={false}
  secondary={false}
  small={true}
  type="button"
>
  Primary
</styled.button>
`;

exports[`Button component renders a small, secondary button when passed prop 1`] = `
<styled.button
  danger={false}
  iconOnly={false}
  large={false}
  link={false}
  primary={false}
  secondary={true}
  small={true}
  type="button"
>
  Primary
</styled.button>
`;

exports[`Button component should not render if icon prop is not valid and no children are supplied 1`] = `null`;

exports[`Button component should render a correct icon only button if no children are passed with an icon 1`] = `
<styled.button
  danger={false}
  iconOnly={true}
  large={false}
  link={false}
  primary={false}
  secondary={false}
  small={false}
  type="button"
>
  <ButtonIcon
    icon="close"
    iconOnly={true}
    large={false}
    small={false}
  />
</styled.button>
`;

exports[`Button component should render a correct icon only large button if no children are passed with an icon and large prop 1`] = `
<styled.button
  danger={false}
  iconOnly={true}
  large={true}
  link={false}
  primary={false}
  secondary={false}
  small={false}
  type="button"
>
  <ButtonIcon
    icon="close"
    iconOnly={true}
    large={true}
    small={false}
  />
</styled.button>
`;

exports[`Button component should render a correct icon only primary button if no children are passed with an icon and primary prop 1`] = `
<styled.button
  danger={false}
  iconOnly={true}
  large={false}
  link={false}
  primary={true}
  secondary={false}
  small={false}
  type="button"
>
  <ButtonIcon
    icon="close"
    iconOnly={true}
    large={false}
    small={false}
  />
</styled.button>
`;

exports[`Button component should render a correct icon only secondary button if no children are passed with an icon and secondary prop 1`] = `
<styled.button
  danger={false}
  iconOnly={true}
  large={false}
  link={false}
  primary={false}
  secondary={true}
  small={false}
  type="button"
>
  <ButtonIcon
    icon="close"
    iconOnly={true}
    large={false}
    small={false}
  />
</styled.button>
`;

exports[`Button component should render a correct icon only small button if no children are passed with an icon and small prop 1`] = `
<styled.button
  danger={false}
  iconOnly={true}
  large={false}
  link={false}
  primary={false}
  secondary={false}
  small={true}
  type="button"
>
  <ButtonIcon
    icon="close"
    iconOnly={true}
    large={false}
    small={true}
  />
</styled.button>
`;

exports[`Button component should render a disabled button 1`] = `
<styled.button
  danger={false}
  disabled={true}
  iconOnly={false}
  large={false}
  link={false}
  primary={false}
  secondary={false}
  small={false}
  type="button"
>
  Disabled
</styled.button>
`;

exports[`Button component should render a large button with an icon 1`] = `
<styled.button
  danger={false}
  iconOnly={false}
  large={true}
  link={false}
  primary={false}
  secondary={false}
  small={false}
  type="button"
>
  <ButtonIcon
    icon="close"
    iconOnly={false}
    large={true}
    small={false}
  />
  Icon Button
</styled.button>
`;

exports[`Button component should render a primary button with an icon 1`] = `
<styled.button
  danger={false}
  iconOnly={false}
  large={false}
  link={false}
  primary={true}
  secondary={false}
  small={false}
  type="button"
>
  <ButtonIcon
    icon="close"
    iconOnly={false}
    large={false}
    small={false}
  />
  Icon Button
</styled.button>
`;

exports[`Button component should render a secondary button with an icon 1`] = `
<styled.button
  danger={false}
  iconOnly={false}
  large={false}
  link={false}
  primary={false}
  secondary={true}
  small={false}
  type="button"
>
  <ButtonIcon
    icon="close"
    iconOnly={false}
    large={false}
    small={false}
  />
  Icon Button
</styled.button>
`;

exports[`Button component should render a small button with an icon 1`] = `
<styled.button
  danger={false}
  iconOnly={false}
  large={false}
  link={false}
  primary={false}
  secondary={false}
  small={true}
  type="button"
>
  <ButtonIcon
    icon="close"
    iconOnly={false}
    large={false}
    small={true}
  />
  Icon Button
</styled.button>
`;

exports[`Button component should render an icon if a valid icon is passed 1`] = `
<styled.button
  danger={false}
  iconOnly={false}
  large={false}
  link={false}
  primary={false}
  secondary={false}
  small={false}
  type="button"
>
  <ButtonIcon
    icon="close"
    iconOnly={false}
    large={false}
    small={false}
  />
  Icon Button
</styled.button>
`;

exports[`Button component should still render a normal button if icon prop is not valid and children is supplied 1`] = `
<styled.button
  danger={false}
  iconOnly={false}
  large={false}
  link={false}
  primary={false}
  secondary={false}
  small={false}
  type="button"
>
  <ButtonIcon
    icon="qwerty"
    iconOnly={false}
    large={false}
    small={false}
  />
  Invalid icon
</styled.button>
`;
